--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,24 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "@hookform/resolvers": "^3.3.1",
+    "axios": "^1.11.0",
+    "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
     "react-hook-form": "^7.45.4",
-    "@hookform/resolvers": "^3.3.1",
-    "zod": "^3.22.2",
+    "react-hot-toast": "^2.6.0",
     "react-query": "^3.39.3",
-    "lucide-react": "^0.263.1",
-    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.30.1",
     "recharts": "^2.8.0",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "@fullcalendar/react": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/timegrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8",
-    "date-fns": "^2.30.0"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -41,7 +41,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^7.1.3"
   }
 }
