--- a/backend/composer.json
+++ b/backend/composer.json
@@ -24,7 +24,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5.3",
-         "spatie/laravel-igition": "^2.0"
+        "spatie/laravel-ignition": "^2.9"
     },
     "autoload": {
         "psr-4": {
